--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,3 +134,71 @@ cancella la nav, ma non i bottoni
 }
 
 /* articles section */
+
+#footerSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
+
+#articlesSection {
+  display: flex;
+  flex-direction: column;
+  width: 66%;
+}
+
+.articleItem {
+  display: flex;
+  flex-direction: row;
+  margin: 1em;
+}
+
+.articleData {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 1em;
+}
+
+.articleAutor {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.articleAutor img {
+  border-radius: 100px;
+  margin-right: 1em;
+}
+
+.articleTitle {
+  font-size: 1.25em;
+}
+
+.articleFooter {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.articleFooter > div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.articleFooter button {
+  background-color: lightgray;
+  border-radius: 50px;
+}
+
+.imgArticle {
+  width: 200px;
+  height: 175px;
+  margin: 1em;
+}
+
+#asideSection {
+  width: 33%;
+}
