--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,6 +199,46 @@ cancella la nav, ma non i bottoni
   margin: 1em;
 }
 
+/* aside section*/
+
 #asideSection {
   width: 33%;
+  padding: 5%;
+}
+
+#asideSection .discoverMore {
+  border-bottom: solid 1px black;
+}
+
+.discoverMore div {
+  margin-bottom: 1em;
+}
+
+.discoverMore button {
+  font-size: 0.7em;
+  border: solid 1px gray;
+  margin: 0.5em;
+}
+
+#asideSection .helper {
+  color: gray;
+}
+
+.helper {
+  margin-top: 1em;
+}
+
+@media screen and (max-width: 1100px) {
+  #footerSection {
+    flex-direction: column-reverse;
+  }
+
+  #articlesSection {
+    width: none;
+  }
+
+  #asideSection {
+    width: none;
+    padding: 5%;
+  }
 }
