--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,10 @@ header {
   padding: 1em;
   background-color: #ffc017;
   border-bottom: solid 1px black;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 nav {
@@ -51,6 +55,10 @@ cancella la nav, ma non i bottoni
 }
 
 /* secondary nav */
+
+main {
+  padding-top: 68px;
+}
 
 #secondaryNav {
   display: flex;
@@ -151,6 +159,7 @@ cancella la nav, ma non i bottoni
 .articleItem {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   margin: 1em;
 }
 
@@ -158,6 +167,7 @@ cancella la nav, ma non i bottoni
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  max-width: 800px;
   margin: 1em;
 }
 
@@ -194,9 +204,17 @@ cancella la nav, ma non i bottoni
 }
 
 .imgArticle {
+  display: flex;
+  align-items: center;
   width: 200px;
   height: 175px;
   margin: 1em;
+}
+
+@media screen and (max-width: 750px) {
+  .imgArticle {
+    display: none;
+  }
 }
 
 /* aside section*/
@@ -234,11 +252,11 @@ cancella la nav, ma non i bottoni
   }
 
   #articlesSection {
-    width: none;
+    width: 100%;
   }
 
   #asideSection {
-    width: none;
+    width: 90%;
     padding: 5%;
   }
 }
