--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
 /*GENERAL*/
-/* @import url(https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Spectral:wght@500&display=swap%22); */
+@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Spectral:wght@500&display=swap%22);
 
 body {
   margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .marginLeft {
@@ -11,6 +13,15 @@ body {
 
 .marginRight {
   padding-right: 100px;
+}
+
+@media screen and (max-width: 600px) {
+  .marginLeft {
+    padding-left: 50px;
+  }
+  .marginRight {
+    padding-right: 50px;
+  }
 }
 
 .bolad {
@@ -59,6 +70,7 @@ main {
 }
 
 #secondaryNav {
+  font-family: Spectral, san serif;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -76,6 +88,7 @@ main {
 }
 
 #secondaryNav > div > h2 {
+  letter-spacing: -5px;
   font-size: 4.5em;
   margin: 0 0 0.25em 0;
 }
@@ -97,6 +110,32 @@ main {
 #secondaryNav svg {
   max-width: 45%;
   min-width: 30%;
+}
+
+@media screen and (max-width: 768px) {
+  #secondaryNav > div > h2 {
+    letter-spacing: -5px;
+    font-size: 4em;
+    margin: 0 0 0.25em 0;
+  }
+
+  #secondaryNav > div > p {
+    font-size: 1.5em;
+    margin: 0 0 0.5em 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #secondaryNav > div > h2 {
+    letter-spacing: -5px;
+    font-size: 3em;
+    margin: 0 0 0.25em 0;
+  }
+
+  #secondaryNav > div > p {
+    font-size: 1.2em;
+    margin: 0 0 0.5em 0;
+  }
 }
 
 /* card section */
